@@ -5,6 +5,7 @@
  * Fall back to old describe_splits if d_s_ex is not available (CASSANDRA-4803)
  * Improve error reporting when streaming ranges fail (CASSANDRA-5009)
  * cqlsh: fix timestamp formatting on some platforms (CASSANDRA-5046)
+ * Fix ALTER TABLE overriding compression options with defaults (CASSANDRA-4996)
 
 
 1.1.7
